# TestHub

./: .dockerignore  .env.tmp  .gitignore  CLEANUP_SUMMARY.md  Dockerfile  ERROR_HANDLING.md  FINAL_USER_GUIDE.md  LICENSE  LOGIN_ISSUE_SOLUTION.md  PROJECT_OVERVIEW.md  PROJECT_STATUS_REPORT.md  README.md  README_工作流系统.md  README_自动化模块.md  SOLUTION_SUMMARY.md  TESTING_INSTRUCTIONS.md  USAGE.md  WORKFLOW_SYSTEM_SUMMARY.md  automation_verification_report.json  check_project.py  debug_api.html  docker-compose.yml  fix_frontend_issues.py  fix_login.py  frontend_test_report.md  pyproject.toml  quick_start_automation.py  run_all_tests.py  start.py  start.sh  tatus  test_api.py  test_api_endpoints.py  test_backend.py  test_basic.py  test_db.py  test_frontend.html  test_frontend.js  test_frontend_api.html  test_frontend_api.py  (+21 more)
.cursor/: mcp.json
.cursor/rules/: project.mdc
app/: main.py
app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  response.py  versioning.py
app/drivers/: __init__.py
app/schemas/: command_schemas.py  tcp_schemas.py  test_result_schemas.py  workflow_schemas.py  workflow_template_schemas.py
app/services/: command_service.py  tcp_service.py  test_result_service.py  workflow_service.py  workflow_template_service.py
app/tests/: conftest.py
backend/: add_hex_field.py  notification_usage_example.py  start.py  test_notification.py
backend/app/: __init__.py  main.py
backend/data/: commands.db  commands_updated.sql  serial_login_configs.json
backend/scripts/: migrate_db.py
data/: commands.db  commands.json  commands.sql  saved_commands.json  testhub.db
data/data/: testhub.db
docs/: automation-module.md  notification_feature.md
frontend/: FRONTEND_SERIAL_README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: login-test.html  serial-id-demo.html  serial-test.html
scripts/: build-prod.sh  start-dev.sh
tests/: conftest.py  test_health.py
tools/: serial_test.py
web/: pnpm-lock.yaml  tsconfig.json
(+123 files in other folders)
