[project]
name = "industrial-hmi"
version = "0.1.0"
description = "Industrial HMI with AT command communication"
authors = [
    {name = "Developer", email = "dev@example.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "pyserial>=3.5",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "websockets>=12.0",
    "sqlmodel>=0.0.24",
    "pyinstaller>=6.15.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
